@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.011.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.012.
 use strict;
 use warnings;
 
@@ -20,10 +20,12 @@ my %WriteMakefileArgs = (
     "Carp" => 0,
     "IO::File" => 0,
     "IO::Handle" => 0,
+    "TryCatch" => 0,
     "feature" => 0,
     "mro" => 0,
     "namespace::autoclean" => 0,
     "strict" => 0,
+    "utf8" => 0,
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
@@ -33,7 +35,7 @@ my %WriteMakefileArgs = (
     "Test::Exception" => 0,
     "Test::More" => 0
   },
-  "VERSION" => "1.05",
+  "VERSION" => "1.06",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -48,10 +50,12 @@ my %FallbackPrereqs = (
   "IPC::Open3" => 0,
   "Test::Exception" => 0,
   "Test::More" => 0,
+  "TryCatch" => 0,
   "feature" => 0,
   "mro" => 0,
   "namespace::autoclean" => 0,
   "strict" => 0,
+  "utf8" => 0,
   "warnings" => 0
 );
 
