@@ -5,6 +5,7 @@ Revision history for exact
         - Carp methods import
         - TryCatch integration
         - Include support for UTF8
+        - Autoclean method for parameter input
         - Update feature sets to include Perl 5.30
 
 1.05      2018-06-21 16:16:55-07:00 America/Los_Angeles
